@@ -1,3 +1,8 @@
+Thu Feb 26 07:18:15 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tests/Bug_3574_Regression/test.cpp:
+          Added some more tests
+
 Wed Feb 25 16:22:50 UTC 2009  Vladimir Zykov  <vz@prismtech.com>
 
         * orbsvcs/orbsvcs/IFRService/Container_i.cpp:
